Configuración de conexión a PostgreSQL y prueba JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=horarios
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Horarios_SIAAN
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# jpa (opcional, pero útil en desarrollo)
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
