cambios en el paquete model y repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,30 @@
 spring.application.name=horarios
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Horarios_SIAAN
+# --- PostgreSQL Database Configuration ---
+# ¡Configuración corregida con la base de datos en minúsculas!
+spring.datasource.url=jdbc:postgresql://localhost:5433/horario_siaan2
 spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-# jpa (opcional, pero útil en desarrollo)
+# No es necesario poner el driver-class-name, Spring Boot lo infiere.
+
+# --- JPA / Hibernate Configuration ---
+
+# 'none' significa que Hibernate NO creará ni modificará tablas.
+# Esto es correcto ÚNICAMENTE si ya ejecutaste el script SQL
+# para crear todas las tablas manualmente.
+# Si la base de datos está vacía, cambia esto a 'update'
+# para que Spring Boot cree las tablas por ti.
 spring.jpa.hibernate.ddl-auto=none
+
+# Esta es la forma moderna de definir el dialecto
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# --- Logging ---
+# Muestra el SQL que Hibernate está ejecutando
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Formatea el SQL para que sea más fácil de leer en la consola
+spring.jpa.properties.hibernate.format_sql=true
+
+# Deshabilitar 'Open in View' es una buena práctica
+spring.jpa.open-in-view=false
